@@ -45,6 +45,9 @@ Bug Fixes
 
 * SOLR-6647: Bad error message when missing resource from ZK when parsing Schema (janhoy)
 
+* SOLR-6545: Query field list with wild card on dynamic field fails.
+  (Burke Webster, Xu Zhang, shalin)
+
 Other Changes
 ----------------------
 
